--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -37,7 +37,7 @@ import { SITE_TITLE, SITE_DESCRIPTION, PFP_URL, NAME } from '../consts';
 					<h2 class="text-2xl font-semibold text-center">and learning <span class="text-blue-500">Astro</span> and <span class="text-blue-500">Next.js</span></h2>
 				</div>
 				<div class="flex flex-col items-center justify-center mt-10">
-					<h2 class="text-2xl font-semibold">I'm also a <span class="text-blue-500">youtuber</span>.</h2>
+					<h2 class="text-2xl font-semibold">I'm also a <span class="text-red-500 cursor-pointer"><a class="hover:text-red-800" target="_blank" href="https://www.youtube.com/@p55d2k">youtuber</a></span>.</h2>
 					<h2 class="text-2xl font-semibold">and I used <span class="text-blue-500">Astro</span> for this website.</h2>
 				</div>
 			</div>
